[package]
name = "chimera-cli"
version = "0.6.2"
edition = "2021"
description = "A Mock API for every need and more"
authors = ["Abhijith MS <abhijithmsaji132@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ams003010/chimera"
repository = "https://github.com/ams003010/chimera"
readme = "README.md"
keywords = ["mock", "api", "server", "json", "cli"]
categories = ["command-line-utilities", "web-programming"]
documentation = "https://chimera-docs.vercel.app"
exclude = [
    "target/*",
    "chimera.cors",
    "assets/*",
    "docs/*",
    ".gitignore",
    ".github/*",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
rayon = "1.8"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
fake = "4.3.0"
rand = "0.9.0"
local-ip-address = "0.5"
futures = "0.3.31"
uuid = { version = "1.0", features = ["v4"] }

[package.metadata.deb]
maintainer = "Abhijith M S <abhijithmsaji132@gmail.com>"
copyright = "2024, Abhijith M S <abhijithmsaji132@gmail.com>"
license-file = ["LICENSE", "4"]
changelog = "CHANGELOG.md"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/chimera-cli",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/chimera/README",
        "644",
    ],
]
